fixed sticky footer issue, footer was overlapping content

--- a/src/app/shared/scss/footer.scss
+++ b/src/app/shared/scss/footer.scss
@@ -1,4 +1,4 @@
-.footer { background: grey; height: 175px; padding-top: 20px; }
+.footer { background: grey; padding-top: 20px; }
 .footer a { display: block; color: white; line-height: 30px; font-family: OpenSans-Light; cursor: pointer; text-decoration: none; }
 .footer a:hover { color: #ecf0f1; text-decoration: none; }
 .footer p { margin-top: 10px; display: block; color: white; line-height: 30px; font-family: OpenSans-Light; 
